--- a/智能指针.md
+++ b/智能指针.md
@@ -2,9 +2,9 @@
 
 # 智能指针
 
-[智能指针的简单实现]()
+[智能指针的简单实现](https://github.com/katoluo/basic_knowledge/blob/master/code/SmartPoint/smartPointer.hpp)
 
-[测试]()
+[测试](https://github.com/katoluo/basic_knowledge/blob/master/code/SmartPoint/test_smartPointer.cpp)
 
 为了更容易（同时特更安全）地使用动态内存，c++11标准提供了两种**智能指针**类型来管理动态内存对象。智能指针的行为类似常规指针，重要的区别是它负责自动释放所指向的对象。新标准库提供的这两种只能指针的区别在于管理底层指针的方式：**shared_ptr**允许多个指针指向同一个对象；**unique_ptr**则“独占”所指向的对象。标准库还定义了一个名为**weak_ptr**的伴随类，它是一种弱引用，指向shared_ptr所管理的对象。这三种类型都定义在memory头文件中。
 
@@ -29,7 +29,7 @@ if (p1 && p1->empty())
 
 表12.1列出了shared_ptr和unique_ptr都支持的操作。只适用于shared_ptr的操作列于表12.2中。
 
-![sp01.png]()
+![sp01.png](https://github.com/katoluo/basic_knowledge/raw/master/images/sp01.png)
 
 **make_shared 函数**
 
@@ -442,7 +442,7 @@ shared_ptr<int> clone(int p) {
 
 默认情况下，一个用来初始化智能指针的普通指针必须指向动态内存，因为智能指针默认使用delete释放它所关联的对象。我们可以将只能指针绑定到一个指向其他类型的资源的指针上，但是为了这样做，必须提供自己的操作来替代delete。
 
-![sp02.png]()
+![sp02.png](https://github.com/katoluo/basic_knowledge/raw/master/images/sp02.png)
 
 **不要混用普通指针和智能指针.....**
 
@@ -603,7 +603,7 @@ unique_ptr<string> p3;
 p3 = p2; // 错误：unique_ptr不支持赋值
 ```
 
-![sp03.png]()
+![sp03.png](https://github.com/katoluo/basic_knowledge/raw/master/images/sp03.png)
 
 虽然我们不能拷贝或赋值unique_ptr，但可以通过调用release或reset将指针的所有权从一个（非const）unique_ptr转移给另一个unique：
 
@@ -668,7 +668,7 @@ void f(destination &d /* 其他参数 */)
 
 weak_ptr是一种不控制所指向对象生存期的智能指针，它指向由一个shared_ptr管理的对象。将一个weak_ptr绑定到一个是shared_ptr不会改变shared_ptr的引用计数。一旦最后一个指向对象shared_ptr被销毁，对象就会被释放。即使有weak_ptr指向对象，对象也还是会被释放，因此，weak_ptr的名字抓住了这种智能指针“弱”共享对象的特点。
 
-![sp04.png]()
+![sp04.png](https://github.com/katoluo/basic_knowledge/raw/master/images/%E6%88%AA%E5%B1%8F-20210407155901-726x326.png)
 
 当我们创建一个weak_ptr时，要用一个shared_ptr来初始化它：
 
